# RG16-mozaik

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: color_sphere.cpp  color_sphere.hpp  geometry.cpp  geometry.hpp  grid.cpp  grid.hpp  line_drawer.cpp  line_drawer.hpp  main.cpp  mozaik_globals.cpp  mozaik_globals.hpp
src/algorithms/: intersection_detection.cpp  intersection_detection.hpp  polygon_detector.cpp  polygon_detector.hpp
src/shapes/: color_sphere.cpp  color_sphere.hpp  crosshair.cpp  crosshair.hpp  grid.cpp  grid.hpp  lines.cpp  lines.hpp  shape.cpp  shape.hpp  shape_manager.cpp  shape_manager.hpp  tiles.cpp  tiles.hpp
